[tool.poetry]
name = "monty-hall-problem"
version = "0.1.0"
description = ""
authors = ["Robert Marriott <13823574+robertmarriott@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
